Updated seeds file, fix confirmed at table head being blank in audit log dashboard, fixed alignment issues on audit log dashboard table

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,3 +33,11 @@
 	margin: auto;
 	width: 30%;
 }
+
+.table th {
+	text-align: center;
+}
+
+.table {
+	text-align: center;
+}
